# rust-edge

./: .env.example  .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
assets/: fieldmid-banner.html
src/: app.rs  auth.rs  banner.rs  cli.rs  config.rs  connector.rs  database.rs  demo.rs  main.rs  network.rs  schema.rs  session.rs  tui.rs  watcher.rs
