[package]
name = "rust-edge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fieldmid"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
dotenvy = "0.15.7"
futures-lite = "2.6.1"
http-client = { version = "6.5.3", default-features = false, features = ["curl_client"] }
powersync = { version = "0.0.4", features = ["tokio"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1.18.1", features = ["v4"] }
